tests/base/invalid/SetIntersect_CompileFail_1.whiley


void ::main(System.Console sys):
    xs = {1,2,3}
    b = 1.0 ∩ xs
    if b:
        sys.out.println(Any.toString(1))
